add endpoint for receiving git merge cli command
